Fixed invalid references to custom scrollbar images.

--- a/Ops/Dashboard/Stylesheets/Dashboard.css
+++ b/Ops/Dashboard/Stylesheets/Dashboard.css
@@ -623,24 +623,24 @@ section#diarySection #diaryLines
 
 ::-webkit-scrollbar-thumb
 {
-  -webkit-border-image: url("../Images/UI/View/VerticalScrollbar.Thumb.png") 20 20 20 0;
+  -webkit-border-image: url("../Images/VerticalScrollbar.Thumb.png") 20 20 20 0;
   border-width: 20px 0;
   min-height: 40px;
 }
 
 ::-webkit-scrollbar-thumb:hover
 {
-  -webkit-border-image: url("../Images/UI/View/VerticalScrollbar.Thumb.png") 20 0 20 20;
+  -webkit-border-image: url("../Images/VerticalScrollbar.Thumb.png") 20 0 20 20;
 }
 
 ::-webkit-scrollbar-thumb:horizontal
 {
-  -webkit-border-image: url("../Images/UI/View/HorizontalScrollbar.Thumb.png") 0 20 20 20;
+  -webkit-border-image: url("../Images/HorizontalScrollbar.Thumb.png") 0 20 20 20;
   border-width: 0 20px;
   min-width: 40px;
 }
 
 ::-webkit-scrollbar-thumb:horizontal:hover
 {
-  -webkit-border-image: url("../Images/UI/View/HorizontalScrollbar.Thumb.png") 20 20 0 20;
+  -webkit-border-image: url("../Images/HorizontalScrollbar.Thumb.png") 20 20 0 20;
 }
